fix cases where horizontal scroll suddenly appears on threads

--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@
   width: 100%;
   position: absolute;
   overflow-y: hidden;
+  overflow-x: hidden;
   top: 0; left: 0; right: 0; bottom: 0;
   margin-top: 3em;
 }
